Обєднує опис членів команди

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
              <h2 class="section-title">Чим ми займаємося</h2>
               <ul class="work-list list">
                     <li class="item">
-                        <a href=""><img src="./images/box1.jpg" alt="створення коду" width="370"></a>
+                        <a href=""><img src="./images/box1.jpg" class="img" alt="створення коду" width="370"></a>
                     </li>
                     <li class="item">
-                        <a href=""><img src="./images/box2.jpg" alt="створення мобільних додатків" width="370"></a>
+                        <a href=""><img src="./images/box2.jpg" class="img" alt="створення мобільних додатків" width="370"></a>
                     </li>
                     <li class="item">
-                        <a href=""><img src="./images/box3.jpg" alt="розробка дизайну" width="370"></a>
+                        <a href=""><img src="./images/box3.jpg" class="img" alt="розробка дизайну" width="370"></a>
                     </li>
                 </ul>
             </div>
@@ -86,29 +86,37 @@
                             <img src="./images/igor_demianenko.jpg" class="foto"
                                 alt="чоловік з бородою в червоній сорочці та окулярах, шатен"
                                 width="270">
-                            <h3 class="title">Ігор Дем'яненко</h3>
-                            <p class="position">Product Designer</p>
+                                <div class="description">
+                                    <h3 class="title">Ігор Дем'яненко</h3>
+                                    <p class="position">Product Designer</p>
+                                </div>
                         </li>
                         <li class="team-member">
                             <img src="./images/olga_repina.jpg" class="foto" 
                                 alt="світловолоса, усміхнена, молода жінка в окулярах та піджаку"
                                 width="270">
-                            <h3 class="title" class="title">Ольга Рєпіна</h3>
-                            <p class="position">Frontend Developer</p>
+                                <div class="description">
+                                    <h3 class="title" class="title">Ольга Рєпіна</h3>
+                                    <p class="position">Frontend Developer</p>
+                                </div>
                                 </li>
                         <li class="team-member">
                             <img src="./images/mykola_tarasov.jpg" class="foto"
                                 alt="молодий чоловік в світлоблакитній сорочці з відкритою посмішкою"
                                 width="270">
-                            <h3 class="title">Микола Тарасов</h3>
-                            <p class="position">Marketing</p>
+                                <div class="description">
+                                    <h3 class="title">Микола Тарасов</h3>
+                                    <p class="position">Marketing</p>
+                                </div>
                         </li>
                         <li class="team-member">
                             <img src="images/michael_yermakov.jpg" class="foto"
                                 alt="молодий чоловік з татуюванням на правій руці в чорній футболці та чорних окулярах" 
                                 width="270">
-                            <h3 class="title">Михайло Єрмаков</h3>
-                            <p class="position">UI Designer</p>
+                                <div class="description">
+                                    <h3 class="title">Михайло Єрмаков</h3>
+                                    <p class="position">UI Designer</p>
+                                </div>
                         </li>
                     </ul>
             </div>
