--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
     <main>
         <!--слоган-->
         <section class="hero">
-            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button class="button" type="button">Замовити послугу</button>
+            <div class="container">
+                <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+                <button class="button" type="button">Замовити послугу</button>
+            </div>
         </section>
         <!--Інструменти-->
         <section class="section">
