--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
         rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -59,7 +59,8 @@
                     <h3 class="title">Сучасні технології</h3>
                     <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                 </li>
-            </ul></div>
+            </ul>
+            </div>
         </section>
         <!--чим ми займаємося-->
         <section class="section no-padding-top">
@@ -98,7 +99,7 @@
                                 alt="світловолоса, усміхнена, молода жінка в окулярах та піджаку"
                                 width="270">
                                 <div class="description">
-                                    <h3 class="title" class="title">Ольга Рєпіна</h3>
+                                    <h3 class="title">Ольга Рєпіна</h3>
                                     <p class="position">Frontend Developer</p>
                                 </div>
                                 </li>
@@ -128,7 +129,6 @@
     <footer class="footer">
         <div class="container">
             <a href="./index.html" class="logo"><span class="logo-style">Web</span>Studio</a>
-            <!--буде посилання-->
             <address class="footer-adr">
                 <ul class="footer-adr-list list">
                     <li  class="item">
