--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -39,7 +39,7 @@
             <!--фільтри за типом робіт-->
             <ul class="filter-list list">
                 <li class="item"><button class="button filter" type="button">Усі</button></li>
-                <li class="item"class="item"> <button class="button filter" type="button">Веб-сайти</button></li>
+                <li class="item"><button class="button filter" type="button">Веб-сайти</button></li>
                 <li class="item"><button class="button filter" type="button">Додатки</button></li>
                 <li class="item"><button class="button filter" type="button">Дизайн</button></li>
                 <li class="item"><button class="button filter" type="button">Маркетинг</button></li>
