--- a/portfolio.html
+++ b/portfolio.html
@@ -17,19 +17,21 @@
 <body>
     <header class="header">
         <!--меню в хедері-->
-        <nav class="container main-nav">
-            <a href="./index.html" class="logo"><span class="logo-style">Web</span>Studio</a>
-            <!--буде посилання-->
-            <ul class="site-nav list">
-                <li class="item"><a href="./index.html" class="link">Студія</a></li>
-                <li class="item"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-                <li class="item"><a href="#" class="link">Контакти</a></li>
-            </ul>
-            <ul class="cont-nav list"><!--контакти в хедері-->
+        <div class="container main-nav">
+            <nav class="nav">
+                <a href="./index.html" class="logo"> <span class="logo-style">Web</span>Studio</a>
+                <ul class="site-nav list">
+                    <li class="item"><a href="./index.html" class="link">Студія</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+                    <li class="item"><a href="#" class="link">Контакти</a></li>
+                </ul>
+            </nav>
+            <ul class="cont-nav list">
                 <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <!--контакти в хедері-->
                 <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
-        </nav> 
+        </div>
     </header>
     <main>
         <section class="section">
